# app/Http/Controllers/Annotations/CRUDDocTypeAnnotationController.php
@@ -25,6 +25,22 @@ namespace App\Http\Controllers\Annotations ;
 
  *
 
+ * @OA\GET(
+ *     path="/api/document-types",
+ *     summary="Reading all document types",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="200", description="OK"),
+ * @OA\Response(response="404", description="Not Found"),
+ * @OA\Response(response="500", description="Internal Server Error"),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     tags={"CRUD DocType"},
+*),
+
+
  * @OA\POST(
  *     path="/api/document-types",
  *     summary="Create a  new DocType",
